--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  font-size: 16px;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,10 +24,23 @@
 body {
   height: 100%;
   overflow: auto;
-  /* margin: 0; */
-  /* display: flex; */
-  /* flex-direction: column;
-  align-items: center; */
-  /* place-items: center; */
+  box-sizing: border-box;
   min-width: 100vw;
+}
+
+li {
+  list-style-type: none;
+}
+
+/* TrussWorks class settings */
+.grid-container {
+  max-width: 100rem !important;
+}
+
+.linkedin-grid-container {
+  width: 73rem;
+}
+
+.usa-card__container {
+  border-width: 1px !important;
 }
