--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 :root {
   font-family: Helvetica, sans-serif;
   line-height: 1.5;
@@ -41,6 +45,7 @@ li {
   width: 73rem;
 }
 
-.usa-card__container {
-  border-width: 1px !important;
+.linkedin-card {
+  border-width: 1px;
+  border-color: #a9aeb1;
 }
