--- a/src/index.css
+++ b/src/index.css
@@ -49,3 +49,22 @@ li {
   border-width: 1px;
   border-color: #a9aeb1;
 }
+
+.bg-white {
+    display: flex;
+    justify-content: space-between; 
+    align-items: center; 
+  }
+  
+  
+  .header-left {
+    display: flex; 
+    align-items: center;
+    margin-left: 23em;
+  }
+  
+
+  .header-right {
+    display: flex; 
+    gap: 10px; 
+  }
