--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
   font-size: 16px;
+  background-color: rgb(242, 240, 234);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -22,18 +23,15 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  overflow-y: auto;
-}
-
-body {
-  height: 100%;
-  overflow: auto;
-  box-sizing: border-box;
-  min-width: 100vw;
 }
 
 li {
   list-style-type: none;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 /* TrussWorks class settings */
@@ -51,20 +49,29 @@ li {
 }
 
 .bg-white {
-    display: flex;
-    justify-content: space-between; 
-    align-items: center; 
-  }
-  
-  
-  .header-left {
-    display: flex; 
-    align-items: center;
-    margin-left: 23em;
-  }
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
-  .header-right {
-    display: flex; 
-    gap: 10px; 
-  }
+.header-left {
+  display: flex;
+  align-items: center;
+  margin-left: 23em;
+}
+
+.header-right {
+  display: flex;
+  gap: 10px;
+}
+
+/* Personal CSS Classes */
+
+.hover-link-profile-name:hover {
+  text-decoration: underline;
+}
+
+/* Not work with USWDS*/
+.text-thin {
+  font-weight: 100;
+}
